# avr-audio-bootloader

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-bootloader.sh  platformio.ini
bootloader-rs/: Cargo.toml  build.rs
bootloader-rs/.cargo/: config.toml
bootloader-rs/src/: crc.rs  frame.rs  lib.rs  signal.rs  spi.rs  spm.rs
bootloader/src/env/atmega328p/: spi.cpp  spi.h
encoder/: Cargo.toml
encoder/src/: cli.yml  frame.rs  lib.rs  lpf.rs  main.rs  manchester_encoder.rs
hex2wav/: Cargo.toml
hex2wav/src/: frame.rs  lib.rs  main.rs
src/: bootloader.cpp  bootloader.h
src/env/atmega328p/: main.cpp
src/env/uno/: main.cpp
