[package]
name = "bootloader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
bare-metal = "0.2.5"
vcell = "0.1.3"
avr-libc = "0.2.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno", "rt"]

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
features = ["atmega328p"]

[dependencies.avr-device]
version = "0.3.4"
features = ["atmega328p", "rt"]
